--- a/config.json
+++ b/config.json
@@ -5,8 +5,8 @@
     "access_point": {
         "force_reconfigure": false,
         "wifi_interface":    "wlan0",
-        "ssid":              "rpi-config-ap",
-        "passphrase":        "123456z*",
+        "ssid":              "homebase",
+        "passphrase":        "homebase",
         "domain":            "rpi.config",
         "ip_addr":           "192.168.88.1",
         "netmask":           "255.255.255.0",
